@@ -11,7 +11,7 @@ fi
 AC_SUBST(LD)
 
 CFLAGS="-Wall -W -g -O2"
-CPPFLAGS="$(CPPFLAGS) -D_FILE_OFFSET_BITS=64"
+CPPFLAGS="$CPPFLAGS -D_FILE_OFFSET_BITS=64"
 
 AC_ARG_ENABLE(kernel-module,
 	[  --enable-kernel-module  Compile kernel module, requires --with-kernel option ])
@@ -71,6 +71,14 @@ if test "$enable_kernel_module" != "no"; then
 			[#include <linux/fs.h>])
 		CFLAGS="$old_cflags"
 	fi
+	AC_MSG_CHECKING([if kernel has extended attribute support])
+	if test -f $kernelsrc/include/linux/xattr.h; then
+		AC_DEFINE(HAVE_KERNEL_XATTR, 1, [Kernel has xattr support],,)
+		AC_MSG_RESULT([yes])
+	else
+		AC_MSG_RESULT([no])
+	fi
+
 	isuml=no
 	KERNELMAKE_PARAMS=
 	AC_MSG_CHECKING([if this is user mode linux])
